# ant-colony

./: .gitignore  README.md  _verify_agents.py  _verify_renderer.py  demo.py  pyproject.toml  run.py  test_all.py
configs/: default.yaml
src/ant_colony/: __init__.py  __main__.py  core.py  simulation.py
src/ant_colony/agents/: __init__.py  builder.py  forager.py  queen.py  soldier.py
src/ant_colony/behaviors/: __init__.py  avoid_obstacles.py  colony_manager.py  deposit_trail.py  follow_gradient.py  wander.py
src/ant_colony/config/: __init__.py  config.yaml
src/ant_colony/pheromones/: __init__.py  ph_grid.py
src/ant_colony/pysimengine/: __init__.py  behavior.py  core.py
src/ant_colony/renderers/: __init__.py  hud.py  layers.py  pheromone.py  renderer.py  sprites.py  utils.py
src/ant_colony/world/: __init__.py  environment.py  food.py  nest.py  obstacles.py  terrain.py
tests/: test_agents.py  test_behaviors.py  test_core.py  test_pheromones.py  test_world.py
